--- a/index.html
+++ b/index.html
@@ -90,19 +90,16 @@
         <script src="javascripts/scale.fix.js"></script>
         <script src="javascripts/angular-1.0.1.min.js"></script>
         <script src="javascripts/main.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133769918-1"></script>
         <script type="text/javascript">
-            /**
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-267455468-2']);
-            _gaq.push(['_setDomainName', 'erdosity.ai']);
-            _gaq.push(['_trackPageview']);
+            <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
 
-            (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
-            **/
+                gtag('config', 'UA-133769918-1');
+            </script>
         </script>
     </body>
 </html>
