trying Html update for default

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h3>Business Objective</h3>
                 <p>
                     <label>Desired Accuracy (1%-100%)</label>
-                    <input type="text" ng-model="desiredAccuracy" ng-change="calculate()"/><br/>
+                    <input type="text" ng-model="desiredAccuracy" value="70" ng-change="calculate()"/><br/>
                     <label>Decipher Personal Information</label>
                     <input type="radio" ng-model="callAuthentication" value="unimportant" ng-change="calculate()"/>Unimportant
                     <input type="radio" ng-model="callAuthentication" value="important" ng-change="calculate()"/>Important
