--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <script src="javascripts/scale.fix.js"></script>
         <script src="javascripts/angular-1.0.1.min.js"></script>
         <script src="javascripts/main.js"></script>
+    
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133769918-1"></script>
         <script type="text/javascript">
@@ -100,6 +101,18 @@
 
                 gtag('config', 'UA-133769918-1');
             </script>
+        </script>
+
+        <!-- Hotjar Tracking Code for https://erdosity.github.io/stt-benchmarking-tool -->
+        <script>
+            (function(h,o,t,j,a,r){
+                h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+                h._hjSettings={hjid:1194674,hjsv:6};
+                a=o.getElementsByTagName('head')[0];
+                r=o.createElement('script');r.async=1;
+                r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+                a.appendChild(r);
+            })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
         </script>
     </body>
 </html>
