--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </header>
 
             <section ng-controller="STTCalculatorCtrl">
+                <img src="images/logo.png" alt="hi" class="inline"/>
                 <h3>Welcome to the Erdosity Speech-to-Text Cognitive Services Benchmarking Calculator.</h3>
 
                 <p>
