--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="wrapper">
             <header>
                 <h1>Erdosity Contact Center Speech-to-Text Transcription Benchmarking Calculator</h1>
-                <p>An app for comparing Total Cost of Deployment of Speech-to-Text (STT) Services across cloud services including human costs <br>
+                <p>
                 According to Deloitte, 62% of companies view customer experience delivered by the contact centers as a competitive differentiator. In a call center setting, agents often follow repetitive scripts that are not personalized to the customer and his or her call intent. However, using AI, businesses can model this customer and agent interaction and streamline call routing and the overall customer engagement process using automation. Despite existing silos in contact centers, line of business specific criteria can be mapped into learning systems. This will result in a greater first call resolution and, consequently, a lower average handling time. Live agents can then be repurposed for higher touch or escalation elated issues. In a 2017 survey of customer-care executives conducted by McKinsey & Company, 57% of executives considered call reduction their number-one priority for the next five years. By understanding why customers are contacting businesses this objective can be achieved. The Cognitive APIs highlighted in this tool can be leveraged to accelerate the path to contact center transformation.</p>
                 <h3>Assumptions</h3>
                 <p>
@@ -34,7 +34,7 @@
                 <h3>Welcome to the Erdosity Speech-to-Text Cognitive Services Benchmarking Calculator.</h3>
 
                 <p>
-                    This is an app that helps you estimate the compare and contrast costs of <a href="http://erdosity.ai/stt/">STT Cloud Services</a>. It is not endorsed by <a href="http://aws.amazon.com">Amazon AWS</a>, nor by <a href="https://cloud.google.com">Google Cloud Platform</a>, nor by <a href="http://www.ibm.com/cloud">IBM Cloud/Watson</a>, nor by <a href="http://azure.microsoft.com">Microsoft Azure/Cognitive Services</a>. Please refer to the <a href="http://erdosity.ai/stt/faqs/">Erdosity STT Benchmarking Calculator FAQ</a>. 
+                    This is an app that helps you estimate the compare and contrast costs of <a href="http://erdosity.ai/stt/">Speech to Text Cloud Services</a>. Please refer to the <a href="http://erdosity.ai/stt-faqs/">Erdosity Methodology Speech to Text Benchmarking Calculator FAQ</a> to understand our modeling process. 
                 </p>
                 <p>
                 If you have questions/comments, please let us know at <a href="https://twitter.com/erdosity">@erdosity</a> or our <a href="mailto:info@erdosity.ai">email</a>. Thanks!
