--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             </header>
 
             <section ng-controller="STTCalculatorCtrl">
-                <img src="images/logo.png" alt="hi" class="inline"/>
+                <a href="https://www.erdosity.ai">
+                <img border="0" alt="Erdosity" src="images/logo.png">
+                </a>
                 <h3>Welcome to the Erdosity Speech-to-Text Cognitive Services Benchmarking Calculator.</h3>
 
                 <p>
