--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>
                     <label>Desired Accuracy (1%-100%)</label>
                     <input type="text" ng-model="desiredAccuracy" value="70" ng-change="calculate()" data-hj-whitelist/><br/>
-                    <label>Decipher Personal Information</label>
+                    <label>Decipher Personal Information</label> <br>
                     <input type="radio" ng-model="callAuthentication" value="unimportant" ng-change="calculate()" data-hj-whitelist/>Unimportant
                     <input type="radio" ng-model="callAuthentication" value="important" ng-change="calculate()" data-hj-whitelist/>Important
                 </p>
