--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h3>Business Objective</h3>
                 <p>
                     <label>Desired Accuracy (1%-100%)</label>
-                    <input type="text" ng-model="desiredAccuracy" value="70" ng-change="calculate()" data-hj-whitelist/><br/>
+                    <input type="text" ng-model="desiredAccuracy" value="70" ng-change="calculate()" data-hj-whitelist/><br/> <br><br>
                     <label>Decipher Personal Information</label> <br>
                     <input type="radio" ng-model="callAuthentication" value="unimportant" ng-change="calculate()" data-hj-whitelist/>Unimportant
                     <input type="radio" ng-model="callAuthentication" value="important" ng-change="calculate()" data-hj-whitelist/>Important
