trying again calc-min.js

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <script src="javascripts/scale.fix.js"></script>
         <script src="javascripts/angular-1.0.1.min.js"></script>
-        <script src="javascripts/main.js"></script>
+        <script src="javascripts/calc-min.js"></script>
     
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133769918-1"></script>
