--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <h3>Welcome to the Erdosity Speech-to-Text Cognitive Services Benchmarking Calculator.</h3>
 
                 <p>
-                    This is an app that helps you estimate the compare and contrast costs of <a href="http://erdosity.ai/stt/">Speech to Text Cloud Services</a>. Please refer to the <a href="http://erdosity.ai/stt-faqs/">Erdosity Methodology Speech to Text Benchmarking Calculator FAQ</a> to understand our modeling process. 
+                    This is an app that helps you estimate the compare and contrast costs of <a target="_blank" rel="noopener noreferrer" href="http://erdosity.ai/">Speech to Text Cloud Services</a>. Please refer to the <a target="_blank" rel="noopener noreferrer" href="http://erdosity.ai/stt-faqs/">Erdosity Methodology Speech to Text Benchmarking Calculator FAQ</a> to understand our modeling process. 
                 </p>
                 <p>
-                If you have questions/comments, please let us know at <a href="https://twitter.com/erdosity">@erdosity</a> or our <a href="mailto:info@erdosity.ai">email</a>. Thanks!
+                If you have questions/comments, please let us know at <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/erdosity">@erdosity</a> or our <a target="_blank" rel="noopener noreferrer" href="mailto:info@erdosity.ai">email</a>. Thanks!
                 </p>
 
                 <h3>Volumetrics</h3>
