--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <p>
                     This is an app that helps you estimate the compare and contrast costs of <a target="_blank" rel="noopener noreferrer" href="http://erdosity.ai/">Speech to Text Cloud Services</a>. Please refer to the <a target="_blank" rel="noopener noreferrer" href="http://erdosity.ai/stt-faqs/">Erdosity Methodology Speech to Text Benchmarking Calculator FAQ</a> to understand our proprietary modeling process.  
-                    <font size="1">* Patent Pending</font>
+                    <br> <font size="1">* Patent Pending</font>
                 
                 </p>
                 <p>
