--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             </header>
 
             <section ng-controller="STTCalculatorCtrl">
-                <a href="https://www.erdosity.ai">
+                <a href="https://www.erdosity.com">
                 <img border="0" alt="Erdosity" src="images/logo.png">
                 </a>
                 <h3>Welcome to the Erdosity Speech-to-Text Cognitive Services Benchmarking Calculator.</h3>
 
                 <p>
-                    This is an app that helps you estimate the compare and contrast costs of <a target="_blank" rel="noopener noreferrer" href="http://erdosity.ai/">Speech to Text Cloud Services</a>. Please refer to the <a target="_blank" rel="noopener noreferrer" href="http://erdosity.ai/stt-faqs/">Erdosity Methodology Speech to Text Benchmarking Calculator FAQ</a> to understand our proprietary modeling process.  
+                    This is an app that helps you estimate the compare and contrast costs of Speech to Text Cloud Services. Please refer to the <a target="_blank" rel="noopener noreferrer" href="https://www.erdosity.com/feed/stt">Speech to Text Methodology post</a> to understand our proprietary modeling process.  
                     <br> <font size="1">* Patent Pending</font>
                 
                 </p>
